<resources>
    <string name="app_name">MyNotes</string>
    <string name="my_notes">МОИ ЗАМЕТКИ</string>
    <string name="text_notes">Текст заметки</string>
    <string name="title_notes">Название заметки</string>
    <string name="new_note_title">Новая заметка</string>
    <string name="text_changed">Изменено:</string>
    <string name="ok_bth_title">Ок</string>
    <string name="log_out">Выйти</string>
    <string name="logout_dialog_title">Выйти из аккаунта?</string>
    <string name="logout_dialog_message">Все ваши заметки будут сохранены. Вы сможете получить к ним доступ после авторизации.</string>
    <string name="logout_dialog_cancel">Отмена</string>
    <string name="text_btn_save">Сохранить</string>
    <string name="change_color_menu_title">Изменить цвет</string>
    <string name="delete_menu_title">Удалить заметку</string>
    <string name="delete_dialog_message">Вы действительно хотите удалить заметку?</string>
    <string name="cancel_btn_title">Отмена</string>
</resources>